{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Default",
            "id": "6c1cf526-aaf6-41b9-87ff-d8d23ddd0d7a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9c31f0e9-1019-4f2f-b65e-2996ad85b2bc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "ffaa0605-6d88-4067-ba66-da9eae55a1d5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=2)"
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "ae4d6ca4-7f70-4681-bb43-d29fae3290f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "586f7923-4033-4337-99c1-f5c2bb5d3ce2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6e74ce51-b7d4-41a2-beee-c85956b34242",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f1341889-b8af-435a-91a3-c2358299343f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7687b254-76b1-45fb-8ba0-8bf237692fe8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e074f7a0-15cb-46ce-af35-b5cb5812ff3c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "caafcfac-b7d8-43fb-8cc6-7e77c27f7968",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75c66e38-1541-4826-b465-6e2a9aeb558a",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "622d754b-fdf8-49ea-a216-6c08e50e1dd5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "738b47db-249c-4736-95d3-02963f19d896",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e9165bd-2ec5-4722-8dd2-e454b6f2dfb8",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b504f40-c81f-4209-9271-9fbded5551d9",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}